# MassCube

./: .dockerignore  .gitignore  AGENT.md  Dockerfile  README.generated.md  README.md  docker-compose.yml  manual.md  readme.md  requirements.txt  spenvis_pos.txt  spenvis_tpo.txt
Irene/: irene_defs.py  version_1.58.001.txt
Irene/api_demos/demoApp/C/: CMakeLists.txt  demoAppC.c
Irene/api_demos/demoApp/CXX/: CMakeLists.txt  demoApp.cpp  getoptWindows.cpp
Irene/api_demos/demoModel/C/: CMakeLists.txt  demoModelC.c
Irene/documents/Licenses/: AE9_AP9_SPM_license  HDF5_license  OpenMPI_license
Irene/kernelXml/: Dose_electron_fullsphere_Al.xml  Dose_electron_fullsphere_C.xml  Dose_electron_fullsphere_CaF2.xml  Dose_electron_fullsphere_GaAs.xml  Dose_electron_fullsphere_H2O.xml  Dose_electron_fullsphere_LiF.xml  Dose_electron_fullsphere_Si.xml  Dose_electron_fullsphere_SiO2.xml  Dose_electron_fullsphere_Tissue.xml  Dose_electron_fullsphere_air.xml  Dose_electron_fullsphere_bone.xml  Dose_electron_hemisphere_Al.xml  Dose_electron_hemisphere_C.xml  Dose_electron_hemisphere_CaF2.xml  Dose_electron_hemisphere_GaAs.xml  Dose_electron_hemisphere_H2O.xml  Dose_electron_hemisphere_LiF.xml  Dose_electron_hemisphere_Si.xml  Dose_electron_hemisphere_SiO2.xml  Dose_electron_hemisphere_Tissue.xml  Dose_electron_hemisphere_air.xml  Dose_electron_hemisphere_bone.xml  Dose_electron_semiinf_Al.xml  Dose_electron_semiinf_C.xml  Dose_electron_semiinf_CaF2.xml  Dose_electron_semiinf_GaAs.xml  Dose_electron_semiinf_H2O.xml  Dose_electron_semiinf_LiF.xml  Dose_electron_semiinf_Si.xml  Dose_electron_semiinf_SiO2.xml  Dose_electron_semiinf_Tissue.xml  Dose_electron_semiinf_air.xml  Dose_electron_semiinf_bone.xml  Dose_electron_slab_Al.xml  Dose_electron_slab_C.xml  Dose_electron_slab_CaF2.xml  Dose_electron_slab_GaAs.xml  Dose_electron_slab_H2O.xml  Dose_electron_slab_LiF.xml  Dose_electron_slab_Si.xml  (+48 more)
Irene/modelData/: SPMEV12_runtime_tables.mat  SPMHEV10_runtime_tables.mat  SPMHV12_runtime_tables.mat  SPMOV10_runtime_tables.mat  fastPhi_net.mat  fast_hmin_net.mat  sd2DB.h5
Irene/samples/: Ap9ShortInput.txt  Ax9InputSample.txt  CammiceInputSample.txt  DirectionSample.txt  EphemInputSample.txt  LegacyInputSample.txt  MCSample.AE9.input.txt  MCSample.AP9.input.txt  MCSample.Ephem.input.txt  MeanSample.AE9.input.txt  MeanSample.AP9.input.txt  MeanSample.PLASMAelec.input.txt  MeanSample.PLASMAprot.input.txt  OrbitSample.txt  PMSample.AE9.input.txt  PMSample.AP9.input.txt  PMSample.Ephem.input.txt  SpmInputSample.txt  short_leo.csv
Irene/source/: readme.txt
Irene/unitTests/: DOSE_WATER_NOJ2.AP9.input.txt  GEO_10DAY_AE9.AE9.input.txt  GEO_1DAY_SPME.PLASMAelec.input.txt  GPS_1DAY_AE9.AE9.input.txt  GPS_1DAY_SPMH.PLASMAprot.input.txt  GPS_1DAY_SPMHE.PLASMAhe.input.txt  GPS_1DAY_SPMO.PLASMAoxy.input.txt  GTO_1DAY_AP9.AP9.input.txt  GTO_1DAY_TOTALDOSE.AE9.input.txt  GTO_1DAY_TOTALDOSE.AP9.input.txt  GTO_1DAY_TOTALDOSE_KERNEL.AE9.input.txt  GTO_1DAY_TOTALDOSE_KERNEL.AP9.input.txt  INTPLASMA_BOTH.AE9.input.txt  INTPLASMA_BOTH.AP9.input.txt  INTPLASMA_BOTH.PLASMAelec.input.txt  INTPLASMA_BOTH.PLASMAprot.input.txt  INTPLASMA_ELEC.AE9.input.txt  INTPLASMA_ELEC.PLASMAelec.input.txt  KEPLER_GEO_CA.AE9.input.txt  KEPLER_RV_LI.AE9.input.txt  KEPLER_SOLAR_TISSUE.AP9.input.txt  KEPLER_USEJ2_GA.AE9.input.txt  RLL_GRAPHITE.AE9.input.txt  SM_AL.AE9.input.txt  TLE_AIR.AE9.input.txt  meo_orbit.txt
Irene/unitTests/Legacy/: Ax8max_NatEpochSaa_Diff.AE8.input.txt  Ax8max_NatEpochSaa_Diff.AP8.input.txt  Ax8max_NatEpochSaa_Intg.AE8.input.txt  Ax8max_NatEpochSaa_Intg.AP8.input.txt  Ax8max_NatEpoch_Diff.AE8.input.txt  Ax8max_NatEpoch_Diff.AP8.input.txt  Ax8max_NatEpoch_Intg.AE8.input.txt  Ax8max_NatEpoch_Intg.AP8.input.txt  Ax8max_atEpoch_Diff.AE8.input.txt  Ax8max_atEpoch_Diff.AP8.input.txt  Ax8max_atEpoch_Intg.AE8.input.txt  Ax8max_atEpoch_Intg.AP8.input.txt  Ax8min_NatEpochSaa_Diff.AE8.input.txt  Ax8min_NatEpochSaa_Diff.AP8.input.txt  Ax8min_NatEpochSaa_Intg.AE8.input.txt  Ax8min_NatEpochSaa_Intg.AP8.input.txt  Ax8min_NatEpoch_Diff.AE8.input.txt  Ax8min_NatEpoch_Diff.AP8.input.txt  Ax8min_NatEpoch_Intg.AE8.input.txt  Ax8min_NatEpoch_Intg.AP8.input.txt  Ax8min_atEpoch_Diff.AE8.input.txt  Ax8min_atEpoch_Diff.AP8.input.txt  Ax8min_atEpoch_Intg.AE8.input.txt  Ax8min_atEpoch_Intg.AP8.input.txt  CRRactive_NatEpochSa_Diff.CRRESELE.input.txt  CRRactive_NatEpochSa_Diff.CRRESPRO.input.txt  CRRactive_NatEpochSa_Intg.CRRESELE.input.txt  CRRactive_NatEpochSa_Intg.CRRESPRO.input.txt  CRRactive_NatEpoch_Diff.CRRESELE.input.txt  CRRactive_NatEpoch_Diff.CRRESPRO.input.txt  CRRactive_NatEpoch_Intg.CRRESELE.input.txt  CRRactive_NatEpoch_Intg.CRRESPRO.input.txt  CRRactive_atEpoch_Diff.CRRESELE.input.txt  CRRactive_atEpoch_Diff.CRRESPRO.input.txt  CRRactive_atEpoch_Intg.CRRESELE.input.txt  CRRactive_atEpoch_Intg.CRRESPRO.input.txt  CRRquiet_NatEpochSaa_Diff.CRRESELE.input.txt  CRRquiet_NatEpochSaa_Diff.CRRESPRO.input.txt  CRRquiet_NatEpochSaa_Intg.CRRESELE.input.txt  CRRquiet_NatEpochSaa_Intg.CRRESPRO.input.txt  (+14 more)
Irene/unitTests/expectedOutput/: test_output_DOSE_WATER_NOJ2_mean_doseaccumFull.txt  test_output_DOSE_WATER_NOJ2_mean_flux.txt  test_output_DOSE_WATER_NOJ2_mean_fluxFullAvg.txt  test_output_GEO_10DAY_AE9_mc_doseaccumIntv_002.txt  test_output_GEO_10DAY_AE9_mc_doseaccumIntv_004.txt  test_output_GEO_10DAY_AE9_mc_doseaccumIntv_006.txt  test_output_GEO_10DAY_AE9_mc_doseaccumIntv_008.txt  test_output_GEO_10DAY_AE9_mc_doseaccumIntv_010.txt  (+929 more)
Irene/win64/lib/: fileio.lib  (+48 more)
app/: README.md  __init__.py  config.py  main.py  models.py
app/services/: __init__.py  decision_service.py  flux_service.py  orbit_service.py  tle_service.py
app/tools/: irene_cli.py
config/: config.docker.yaml  config.example.yaml  config.yaml  config_versions.json
data/: tle_history.db
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
orbit_quick/: README.md  ae8ap8_irbem.py  irbem_cli.py  orbit_cli.py  output
tests/: test_config.py  test_decision.py
(+305 files in other folders)
